# PostureKeeper

./: .gitignore  CLAUDE.md  Makefile  PLAN.md  Package.resolved  Package.swift  PostureAnalysisSketch.swift  README.md  RESEARCH.md  pyproject.toml
Sources/PostureKeeper/: CameraCapture.swift  EvaluationRunner.swift  FHPAnalyzer.swift  ImageAnalyzer.swift  Logger.swift  VisionProcessor.swift  main.swift
datasets/synthetic/: annotations.jsonl
docs/: PLAN-MVP.md  POSTURE_ANALYSIS.md  RESEARCH.md
tools/: README.md  synth.py
