[project]
name = "posture-keeper-synth"
version = "0.1.0"
description = "Synthetic training data generation for PostureKeeper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "diffusers>=0.31.0",
    "transformers>=4.46.0",
    "accelerate>=1.0.0",
    "pillow>=10.4.0",
    "safetensors>=0.4.5",
    "omegaconf>=2.3.0",
    "xformers>=0.0.28; platform_system != 'Darwin'",  # Not available on macOS
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.26.0",
    "jupyterlab>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long - handled by formatter