[project]
name = "posture-keeper-synth"
version = "0.1.0"
description = "Synthetic training data generation for PostureKeeper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "diffusers>=0.31.0",
    "transformers>=4.46.0",
    "accelerate>=1.0.0",
    "pillow>=10.4.0",
    "safetensors>=0.4.5",
    "omegaconf>=2.3.0",
    "xformers>=0.0.28; platform_system != 'Darwin'", # Not available on macOS
    "bitsandbytes>=0.47.0",
    "sentencepiece>=0.2.1",
    "protobuf>=6.32.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.26.0",
    "jupyterlab>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "datasets"]

[tool.hatch.build]
include = [
    "tools/*.py",
    "datasets/synthetic/**/*.png",
    "datasets/synthetic/**/*.jpg",
    "datasets/synthetic/**/*.jpeg",
    "datasets/synthetic/annotations.jsonl",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long - handled by formatter
